@@ -1,5 +1,9 @@
 2011-09-25 Niels Grewe <niels.grewe@halbordnung.de>
 
+	* Tests/TestDKProxy.m: Type conversion test.
+
+2011-09-25 Niels Grewe <niels.grewe@halbordnung.de>
+
 	* Source/DKBoxingUtils.h
 	* Source/DKBoxingUtils.m
 	* Source/DKArgument.m
